--- a/Doordash/styles.css
+++ b/Doordash/styles.css
@@ -36,6 +36,7 @@ body {
 .white-icon {
     display: none;
 }
+
 .logo-heading h2 {
     display: none;
 }
@@ -175,27 +176,33 @@ input::placeholder {
     margin: 40px 0px;
     padding: 8px 0px;
 }
+
 .main-details {
     display: flex;
     flex-direction: column;
 
 }
+
 .img-details img {
     width: 88px;
     transform: translateX(-4px);
 }
+
 .details {
     display: flex;
     padding: 16px 0px;
     /* min-width: 360px */
 }
+
 .details:nth-child(2) {
     margin-top: -13px;
 }
+
 .text-details {
     margin-top: 0px;
     margin-left: 25px;
 }
+
 .headingAndtext h2 {
     margin: 0;
     font-family: 'cereal-bold';
@@ -205,6 +212,7 @@ input::placeholder {
     color: #191919;
     width: 68%;
 }
+
 .headingAndtext h3 {
     margin: 0;
     font-size: 18px;
@@ -213,6 +221,7 @@ input::placeholder {
     line-height: 1.32;
     font-weight: 500;
 }
+
 .main-details button {
     display: flex;
     align-items: center;
@@ -224,40 +233,48 @@ input::placeholder {
     color: #eb1700;
     letter-spacing: -0.10px;
 }
+
 .main-details button img {
     transform: translate(1.7px, -0.5px);
 }
 
 /* app img */
+
 .top-container {
     margin-top: 115px;
     background: #fff0ed;
-    height: 881px;
 }
+
 .right-section {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
 }
-.img-right img{
+
+.img-right img {
     margin: -98px 0px 0px 74px;
 }
-.img-left img{
+
+.img-left img {
     margin: 0px 0px 0px 0px;
 }
+
 .down-text {
     white-space: nowrap;
 
 }
+
 .img-texts {
-    margin: 20px 0px 0px;
+    margin: 20px 0px 93px;
     padding: 0px 81.6px 0px 16px;
 }
+
 .img-texts h2 {
     font-size: 24px;
     color: #191919;
     font-family: 'cereal-bold';
 }
+
 .img-texts h3 {
     font-size: 14px;
     color: #191919;
@@ -265,6 +282,7 @@ input::placeholder {
     font-family: 'cereal-regular';
     width: 90%;
 }
+
 .img-texts a {
     text-decoration: none;
     border: 1px solid #eb1700;
@@ -276,6 +294,7 @@ input::placeholder {
     width: 80px;
     background: #eb1700;
 }
+
 .img-texts p {
     border: 1px solid #eb1700;
     background: #eb1700;
@@ -286,41 +305,199 @@ input::placeholder {
     padding: 7px 10px;
     width: 80px;
 }
+
 .headingAndtext {
     transform: translate(3px, 0px);
 }
+
 footer {
-   background:rgb(25, 25, 25); 
+    background: rgb(25, 25, 25);
 }
+
 footer h2 {
     color: #fff;
     font-size: 16px;
-    font-family: 'cereal-medium';
+    font-family: 'cereal-regular';
+    margin: 0px 0px 8px;
+    text-align: center;
+    width: 85%;
 }
+
 footer a {
     color: #c4c4c4;
     font-size: 14px;
     text-decoration: none;
     font-family: 'cereal-medium';
- }
+    align-items: center;
+    line-height: 2;
+    text-align: center;
+    width: 90%;
+}
+
+.footer-container {
+    padding: 0px 20px;
+}
+
+.top-footer {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.list-one {
+    display: flex;
+    flex-direction: column;
+}
+
+.list-two {
+    display: flex;
+    flex-direction: column;
+}
+
+.list-first {
+    display: flex;
+    flex-direction: column;
+}
+
+.list-last {
+    display: flex;
+    flex-direction: column;
+}
+
+.left {
+    padding: 32px 0px;
+}
+
+.right {
+    padding: 32px 0px;
+}
+
+/* mid-footer */
+.mid-img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.mid-img img {
+    background: #494949;
+    border-radius: 8px;
+    color: #494949;
+    opacity: 0.7;
+}
+
+.mid-list {
+    display: flex;
+    flex-direction: column;
+}
+
+.mid-list h2 {
+    text-align: center;
+}
+
+.mid-list a {
+    text-align: center;
+}
+
+.about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 32px 0px 0px;
+}
+
+.help {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 32px 0px 0px;
+}
+
+.business {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 32px 0px 0px;
+}
+
+/* bottom-footer */
+.bottom-footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 32px 0px;
+}
+
+.languages {
+    padding: 14px;
+}
+
+.language {
+    display: flex;
+    align-items: center;
+    position: relative;
+    border: 1px solid #fff;
+    border-radius: 16px;
+    padding: 3px 8px 0px 4px;
+    background: #fff;
+    width: 136px;
+    height: 22px;
+}
+
+.selection select {
+    border: none;
+    background-color: #fff;
+    -webkit-appearance: none;
+    font-size: 14px;
+    margin: 1px 0px 8px 5px;
+}
+
+.arrow img {
+    position: absolute;
+    top: 3px;
+    right: 10px;
+}
+
+.social-media a {
+    display: flex;
+    gap: 10px;
+    opacity: 0.7;
+}
+
+.copyright {
+    text-align: center;
+    margin-inline: 14px;
+}
+
+.copyright a {
+    color: #c4c4c4;
+    font-size: 12px;
+    margin-right: 18px;
+    line-height: normal;
+}
+
 @media screen and (min-width: 375px) {
     .headingAndtext h3 {
         width: 91%;
     }
+
     .text-details {
         margin-top: 0px;
         margin-left: 51px;
     }
+
     .img-details img {
         margin-left: 27px;
     }
+
     .text-details {
         margin-top: -1px;
         margin-left: 24px;
     }
+
     .search-bar-container {
-        transform: translate(-1px, 1px);  
+        transform: translate(-1px, 1px);
     }
+
     .text-input input {
         font-size: 16px;
         color: #060404;
@@ -330,26 +507,32 @@ footer a {
         font-family: 'cereal-medium';
         padding: 2px 0px 2px 2px;
     }
-    
+
 }
+
 @media screen and (min-width: 425px) {
     .details {
         justify-content: center;
         padding: 16px;
     }
+
     .img-details img {
         margin-left: 10px;
     }
+
     .headingAndtext h2 {
         width: 100%;
     }
+
     .headingAndtext h2 {
         width: 246px;
     }
+
     .headingAndtext h3 {
         width: 247px;
     }
 }
+
 @media screen and (min-width: 768px) {
     .search-icon {
         display: none;
@@ -362,6 +545,7 @@ footer a {
     .navigation {
         display: block;
     }
+
     .secion-background {
         display: none;
     }
@@ -396,22 +580,87 @@ footer a {
         color: #fff;
         font-family: 'cereal-medium';
     }
+
     .img-details img {
         width: 124px;
     }
+
     .details {
         margin-bottom: 8px;
         gap: 54px;
     }
+
     .text-details {
         margin-top: -8px;
         margin-left: 0px;
     }
-.img-details img {
-    margin-left: 2px;
-    margin-top: -7px;
-    transform: translate(-8px, -1px);
-}
+
+    .img-details img {
+        margin-left: 2px;
+        margin-top: -7px;
+        transform: translate(-8px, -1px);
+    }
+    .img-right img {
+        width: 55.5%;
+    }
+
+    /* footer */
+    .top-footer {
+        display: flex;
+
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    footer h2 {
+        width: 100%;
+        text-align: left;
+    }
+    footer a {
+        width: 100%;
+        text-align: left;
+        font-size: 16px;
+    }
+    .city-one {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 184px;
+    }
+    .right-desk {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 280px;
+    }
+    .mid-footer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .mid-footer a {
+        text-align: left;
+    }
+    .mid-footer h2 {
+        margin: 0px 0px 8px;
+        text-align:justify;
+    }
+    .bottom-footer {
+        display: flex;
+        padding: 32px 0px;
+        flex-direction: row-reverse;
+        align-items: center;
+    }
+    .copyright {
+        text-align: center;
+        margin-inline: 0px;
+    }
+    .right a {
+        white-space: nowrap;
+    }
+    .mid-list {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 100px;
+    }
+    
 }
 
 @media screen and (min-width: 960px) {
@@ -426,7 +675,7 @@ footer a {
     .logo-heading {
         margin-top: 36px;
     }
-   
+
     .logo-heading p {
         font-size: 62.99px;
         line-height: 1.21;
@@ -453,10 +702,50 @@ footer a {
         color: #fff;
         letter-spacing: 2.3px;
         font-family: 'cereal-medium';
+       
     }
 
     .search-bar-container {
         margin-top: 4px;
+    }
+    footer a {
+        font-size: 14px;
+    }
+    footer h2 {
+        white-space: nowrap;
+    }
+    .top-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-column-gap: 40px;
+    }
+    .top-footer {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    .mid-footer {
+        flex-direction: row-reverse;
+        justify-content: space-between;               
+        align-items: flex-start;
+    }
+    .mid-img {
+        padding-top: 32px;
+    }
+    .mid-list {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    .list-last {
+        justify-content: center;
+    }
+    .city-one {
+        gap: 0;
+    }
+    .right-desk {
+        gap: 65px;
+    }
+    .copyright {
+        margin-inline: 100px;
     }
 
 }
@@ -479,35 +768,43 @@ footer a {
         top: 3px;
         right: 3px;
     }
+
     .main-details {
         display: flex;
         flex-direction: row;
         justify-content: center;
         gap: 119px
     }
+
     .details {
         flex-direction: column;
         align-items: center;
         gap: 0px;
     }
+
     .img-details img {
         width: 154px;
     }
+
     .headingAndtext {
         text-align: center;
     }
+
     .main-details button {
         justify-content: center;
         width: 255px;
     }
+
     .main-details span {
         font-size: 18px;
     }
+
     .header {
         margin-bottom: 94px;
     }
 
 }
+
 @media screen and (min-width: 1700px) {
     .head-section {
         height: 580px;
