--- a/Doordash/styles.css
+++ b/Doordash/styles.css
@@ -180,7 +180,6 @@ input::placeholder {
 .main-details {
     display: flex;
     flex-direction: column;
-
 }
 
 .img-details img {
@@ -210,7 +209,7 @@ input::placeholder {
     line-height: 1.25;
     letter-spacing: -0.9px;
     color: #191919;
-    width: 68%;
+    width: 79%;
 }
 
 .headingAndtext h3 {
@@ -332,6 +331,7 @@ footer a {
     line-height: 2;
     text-align: center;
     width: 90%;
+    /* white-space: nowrap; */
 }
 
 .footer-container {
@@ -341,6 +341,8 @@ footer a {
 .top-footer {
     display: flex;
     justify-content: space-evenly;
+    margin-left: 24px;
+    gap: 5px;
 }
 
 .list-one {
@@ -372,16 +374,21 @@ footer a {
 }
 
 /* mid-footer */
+.mid-footer {
+    margin-top: 25px;
+}
 .mid-img {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 30px;
 }
 
 .mid-img img {
     background: #494949;
     border-radius: 8px;
     color: #494949;
+    padding: 1px 3px;
     opacity: 0.7;
 }
 
@@ -592,7 +599,7 @@ footer a {
 
     .text-details {
         margin-top: -8px;
-        margin-left: 0px;
+        margin-left: -1px;
     }
 
     .img-details img {
@@ -601,13 +608,44 @@ footer a {
         transform: translate(-8px, -1px);
     }
     .img-right img {
-        width: 55.5%;
+        width: 426px;
+    }
+    .img-left img {
+        width: 426px;
+    }
+    .img-texts {
+        margin: 10px 0px 93px;
+        padding: 0px 0px  0px 24px;
+    }
+    .right-section {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        margin-block-end: -85px;
+        padding-bottom: 0px;
+    }
+    .foodContainer{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding-top: 120px;
+        padding-bottom: 91px;
+    }
+    
+    .right-direction {
+        background-color: #fff0ed;
+    }
+    .top-container {
+        display: block;
+        background-color: transparent;
     }
 
     /* footer */
+    footer {
+        margin-top: 85px;
+    }
     .top-footer {
         display: flex;
-
         flex-direction: column;
         align-items: flex-start;
     }
@@ -708,6 +746,12 @@ footer a {
     .search-bar-container {
         margin-top: 4px;
     }
+    .img-right img {
+        width: 546px;
+    }
+    .img-left img {
+        width: 546px;
+    }
     footer a {
         font-size: 14px;
     }
@@ -715,7 +759,7 @@ footer a {
         white-space: nowrap;
     }
     .top-container {
-        display: grid;
+        /* display: grid; */
         grid-template-columns: 1fr 1fr;
         grid-column-gap: 40px;
     }
@@ -781,6 +825,9 @@ footer a {
         align-items: center;
         gap: 0px;
     }
+    .details:nth-child(2) {
+        margin-top: 45px;
+    }
 
     .img-details img {
         width: 154px;
@@ -802,11 +849,121 @@ footer a {
     .header {
         margin-bottom: 94px;
     }
-
+    .img-texts h2{
+        font-size: 40px;
+        width: 270px;
+    }
+    .img-texts h3 {
+        font-size: 18px;
+    }
+    .img-texts p {
+        font-size: 16px;
+        width: 89px;
+    }
+    .img-right img {
+        width: 712px;
+    }
+    .img-left img {
+        width: 712px
+    }
+    .text-right h2{
+        white-space: nowrap;
+    }
+    .text-right h3 {
+        width: 89%;
+    }
+    .text-left {
+        padding: 0px 0px 0px 1px;
+    }
+    .headingAndtext h3 {
+        margin-top: 8px;
+    }
+    .right-section {
+        max-width: 1184px;
+        margin-inline: auto;
+    }
+    .right-direction{
+        max-width: none;
+        margin-inline: 0;
+    }
+    .foodContainer{
+        max-width: 1184px;
+        margin-inline: auto;
+    }
 }
-
+@media screen and (min-width: 1400px) {
+    .top-footer {
+        padding: 0px 75px;
+    }
+    .mid-footer {
+        padding: 0px 75px;
+    }
+}
 @media screen and (min-width: 1700px) {
     .head-section {
         height: 580px;
     }
+    .img-details {
+        margin-top: -32px;
+        margin-left: -40px;
+    }
+    .text-details {
+        transform: translate(-35px, 4px);
+    }
+    .top-footer {
+        padding: 0px 390px;
+    }
+    .mid-footer {
+        padding: 0px 390px;
+    }
+    .bottom-footer {
+        margin-left: 0px;
+        padding: 32px 103px;
+        justify-content: center;
+        width: 89%;
+    }
+    .mid-list {
+        gap: 70px;
+    }
+    .img-texts {
+        padding-left: 14%;
+    }
+    .img-right img{
+        right: 350px;
+        height: 504px;
+    }
+    .img-left img{
+        position: relative;
+        left: 300px;
+        height: 490px;
+    }
+    .img-right img {
+        position: relative;
+        right: 400px;
+        height: 500px;
+    }
+    .img-texts h3 {
+        width: 75%;
+    }
+    .img-texts {
+        margin: -65px 161px 93px;
+    }
+    .text-right h3 {
+        width: 65%;
+    }
+    .text-left {
+        padding: 0px 0px 0px 100px;
+    }
+    .right-section{
+        max-width: none;
+    }
+   
+    .foodContainer{
+        max-width: none;
+    }
+}
+@media screen and (min-width: 1700px) {
+    /* .head-section {
+        width: 2900px;
+    } */
 }
