--- a/etsy/style.css
+++ b/etsy/style.css
@@ -38,7 +38,15 @@ header button {
     background: transparent;
 }
 
-.second-head {
+.searchBar-container-second-head {
+    display: none;
+}
+
+.searchBar {
+    display: none;
+}
+
+.list-ul {
     display: none;
 }
 
@@ -94,7 +102,6 @@ header button {
     font-size: 16px;
     padding: 1px 0px 100px 0px;
     font-family: 'graphic-regular';
-
 }
 
 .estyLogo-img a {
@@ -113,8 +120,102 @@ header button {
     margin-left: -3px;
 }
 
-.second-head {
-    display: none;
+.discover-container {
+    margin-top: -1px;
+    margin-bottom: 129px;
+}
+.head-container h2 {
+    font-size: 20px;
+    color: #222222;
+    background: #d7e6f5;
+    padding: 24px 12px 0px;
+    font-family: 'graphic-light';
+    font-weight: 300;
+    text-align: center;
+    line-height: 1.5;
+    height: 179px;
+}
+
+/* img - container */
+.img-ul {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    background: #d7e6f5;
+    padding: 0px 6px 6px;
+    height: 204px;
+}
+
+.img-ul li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    list-style-type: none;
+    text-align: center;
+    margin-top: 25px;
+    margin-bottom: -6px;
+}
+.img-container {
+    margin-top: -89px;
+}
+.img-ul li span {
+    font-size: 13px;
+    font-family: 'graphic-Medium';
+    width: 57%;
+    margin-top: 9px;
+}
+
+.img-small {
+    width: 85px;
+    border-radius: 50%;
+}
+/* deals */
+.dealsOfTheDay {
+    margin: 0px 0px 30px;
+    padding: 0px 12px;
+}
+.deals-text {
+    display: flex;
+    align-items: flex-end;
+    gap: 5px;
+    justify-content: space-between;
+}
+.deals-text h2 {
+    font-size: 24px;
+    font-family: 'graphic-Regular';
+}
+.deals-text span {
+    font-size: 13px;
+    font-family: 'graphic-Medium';
+}
+.deals-text i {
+    margin-left: 6px;
+}
+
+@media screen and (min-width: 640px) {
+    .img-ul {
+        grid-template-columns: repeat(6, 1fr);
+        gap: 16px;
+        padding: 0px 24px;
+
+    }
+    .img-ul li span {
+        margin-top: 10px;
+        width: 72%;
+        line-height: 1.3;
+    }
+    .head-container h2 {
+        font-size: 27px;
+        padding: 25px 12px 0px;
+        line-height: 1.5;
+        height: 166px;
+    }
+    .img-small img {
+        width: 84px;
+    }
+    .searchBar input {
+        width: 81%;
+    }
+
 }
 
 @media screen and (min-width: 900px) {
@@ -122,7 +223,7 @@ header button {
         display: none;
     }
 
-    .second-head {
+    .searchBar-container-second-head {
         display: block;
         width: 66.32%;
     }
@@ -142,23 +243,50 @@ header button {
     }
 
     .searchBar input {
-        width: 86%;
+        width: 89%;
         padding: 16px 0px 13px 8px;
     }
+
     .list-ul {
         display: flex;
+        justify-content: space-between;
+        align-items: center;
         padding: 0px 36px;
     }
+
     .list-items {
-        list-style-type: none;
         display: flex;
+        align-items: center;
         flex-direction: row;
         font-size: 13px;
+        padding: 0px 0px 13px;
         font-family: 'graphic-Regular';
         line-height: 1.3;
+        list-style-type: none;
     }
-
-    .list_ul ul {
-        display: flex;
+    .head-container {
+        margin-top: 13px;
+    }
+    .head-container h2 {
+        font-size: 32px;
+        height: 157px;
+    }
+    .img-small {
+        width: 114px;
+    }
+  
+}
+@media screen and (min-width: 1200px) {
+    .img-ul {
+        padding: 0px 80px;
+    }
+    .img-ul li span {
+        font-size: 16px;
+    }
+    .head-container {
+        margin-top: -5px;
+    }
+    .head-container h2 {
+        padding: 18px 12px 0px;
     }
 }
