--- a/etsy/style.css
+++ b/etsy/style.css
@@ -124,6 +124,7 @@ header button {
     margin-top: -1px;
     margin-bottom: 129px;
 }
+
 .head-container h2 {
     font-size: 20px;
     color: #222222;
@@ -154,9 +155,11 @@ header button {
     margin-top: 25px;
     margin-bottom: -6px;
 }
+
 .img-container {
     margin-top: -89px;
 }
+
 .img-ul li span {
     font-size: 13px;
     font-family: 'graphic-Medium';
@@ -168,54 +171,168 @@ header button {
     width: 85px;
     border-radius: 50%;
 }
+
 /* deals */
 .dealsOfTheDay {
     margin: 0px 0px 30px;
     padding: 0px 12px;
 }
+
 .deals-text {
     display: flex;
     align-items: flex-end;
     gap: 5px;
     justify-content: space-between;
 }
+
 .deals-text h2 {
     font-size: 24px;
     font-family: 'graphic-Regular';
 }
+
 .deals-text span {
     font-size: 13px;
     font-family: 'graphic-Medium';
 }
+
 .deals-text i {
     margin-left: 6px;
 }
+.dealsUl {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+}
+.dealsUl li {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #dddd;
+    border-radius: 12px;
+}
+
+.dealsUl span:nth-child(2) {
+    font-size: 13px;
+    color: #242323;
+    padding: 12px 12px 0px 12px;
+    font-family: 'Graphic-Regular';
+}
+.dealsUl span:nth-child(3) {
+    font-size: 16px;
+    color: #242323;
+    margin-bottom: 5px;
+    padding: 5px 12px 12px 12px;
+    font-family: 'Graphic-Medium';
+    width: 99%;
+}
+.dealsUl img {
+    border-top-left-radius:  12px;
+    border-top-right-radius: 12px;
+    width: 100%;
+   
+}
+/* video */
+
+.video-el {
+    width: 337px;
+    height: 261px;
+    object-fit: cover;
+}
+
+.gifts-card ul{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    padding: 0 12px;
+}
+
+.img-container1 img {
+    width: 100%;
+    height: 100%;
+}
+.img-container1 video {
+    width: 100%;
+    height: 100%;
+}
+.gifts-card ul li{
+    list-style-type:  none;
+}
+.gifts-card li h3{
+    font-size: 13px;
+    font-family: 'graphic-Regular';
+    -webkit-line-clamp: 1;
+    letter-spacing: .1px;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    white-space: normal;
+    margin-bottom: 3px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.gifts-card span img {
+    width: 14px;
+}
+.gifts-card h5{
+    text-decoration: line-through;
+    color: #258635;
+}
+.price-perc {
+    color: #258635;
+}
+.price-both {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+}
+
+
+@media screen and (min-width: 480px) {
+    .dealsUl {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
 
 @media screen and (min-width: 640px) {
+    .img-container {
+        margin-top: -88px;
+    }
     .img-ul {
         grid-template-columns: repeat(6, 1fr);
         gap: 16px;
         padding: 0px 24px;
-
+        height: 87px;
     }
+
     .img-ul li span {
         margin-top: 10px;
         width: 72%;
         line-height: 1.3;
     }
+
     .head-container h2 {
         font-size: 27px;
         padding: 25px 12px 0px;
         line-height: 1.5;
         height: 166px;
     }
+
     .img-small img {
         width: 84px;
     }
+
     .searchBar input {
         width: 81%;
     }
+    .dealsOfTheDay {
+        padding: 0px 30px;
+    }
 
+}
+@media screen and (min-width: 654px) {
+    .img-ul {
+        margin-top: 0px;
+    }
 }
 
 @media screen and (min-width: 900px) {
@@ -264,29 +381,53 @@ header button {
         line-height: 1.3;
         list-style-type: none;
     }
+
     .head-container {
         margin-top: 13px;
     }
+
     .head-container h2 {
         font-size: 32px;
         height: 157px;
     }
+
     .img-small {
         width: 114px;
     }
-  
+    .dealsUl {
+        grid-template-columns: repeat(6, 1fr);
+        gap: 22px;
+    }
+
 }
+
 @media screen and (min-width: 1200px) {
+    .img-container {
+        display: flex;
+        justify-content: center;
+    }
     .img-ul {
         padding: 0px 80px;
+        margin-top: 0px;
+        max-width: 1110px;
+        gap: 55px;
     }
+
     .img-ul li span {
         font-size: 16px;
+        width: 100%;
     }
+
     .head-container {
         margin-top: -5px;
     }
+
     .head-container h2 {
         padding: 18px 12px 0px;
     }
+    .dealsOfTheDay {
+        padding: 0px 36px;
+
+    }
+
 }
