--- a/etsy/style.css
+++ b/etsy/style.css
@@ -51,6 +51,10 @@ header button {
     display: none;
 }
 
+.etsyLogo-img img {
+    margin-left: -3px
+}
+
 .searchBar-container button {
     border: none;
     background: transparent;
@@ -70,8 +74,12 @@ header button {
 .searchBar input {
     background: rgba(227, 218, 218, 0.05);
     border: none;
-    width: 56%;
+    width: 57%;
     padding: 16px 8px 13px 0px;
+}
+
+.searchBar button img {
+    transform: translateX(8px);
 }
 
 .profile-items {
@@ -100,9 +108,10 @@ header button {
 }
 
 .searchBar input::placeholder {
-    font-size: 16px;
-    padding: 1px 0px 100px 0px;
-    font-family: 'graphic-regular';
+    font-size: 15px;
+    padding: 10px 0px 100px 0px;
+    font-family: 'graphic-Regular';
+    transform: translate(0px, -2px);
 }
 
 .estyLogo-img a {
@@ -127,24 +136,50 @@ header button {
 }
 
 .head-container h2 {
-    font-size: 20px;
+    font-size: 21px;
     color: #222222;
     background: #d7e6f5;
-    padding: 24px 12px 0px;
+    padding: 24px 9px 0px;
     font-family: 'graphic-light';
     font-weight: 300;
     text-align: center;
     line-height: 1.5;
     height: 179px;
 }
+/* .searchBar {
+    transform: translate(9px, 1px);
+} */
 
 /* img - container */
+.help-center a:hover {
+    padding: 13px 19px;
+    transition: 0.2s;
+}
+.profile-items li img:hover {
+    background: rgba(237, 233, 233, 0.867);
+    border-radius: 27px;
+    transition: 0.3s;
+}
+.profile-items li:hover {
+    background: rgba(94, 88, 88, 0.867);
+    border-radius: 27px;
+    transition: 0.3s;
+}
+.cart {
+    padding: 10px;
+}
+.fav {
+    padding: 10px;
+}
+.profile-items button {
+    padding: 10px;
+}
 .img-ul {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     background: #d7e6f5;
     padding: 0px 6px 6px;
-    height: 204px;
+    height: 219px;
 }
 
 .img-ul li {
@@ -158,13 +193,13 @@ header button {
 }
 
 .img-container {
-    margin-top: -89px;
+    margin-top: -100px;
 }
 
 .img-ul li span {
     font-size: 13px;
     font-family: 'graphic-Medium';
-    width: 57%;
+    width: 60%;
     margin-top: 9px;
 }
 
@@ -202,6 +237,7 @@ header button {
 .dealsUl {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    row-gap: 15px;
     gap: 10px;
 }
 .dealsUl li {
@@ -250,11 +286,14 @@ header button {
 .img-container1 img {
     width: 100%;
     height: 100%;
+    min-height: 83px;
     border-radius: 7px;
 }
 .img-container1 video {
     width: 100%;
     height: 100%;
+    border-radius: 10px;
+    /* height: 100%; */
 }
 
 .gifts-card ul li{
@@ -334,11 +373,7 @@ header button {
    transition: .5s;
 
 }
-.img-container1 video{
-    width: 100%;
-    /* height: 196px; */
-    border-radius: 10px;
-}
+
 
 .fav-icon {
     display: none;
@@ -409,6 +444,7 @@ header button {
     margin: 0px 0px 6px;
     padding: 36px 0px 0px;
 }
+/* 13 */
 .theEtsy {
    margin: 0px 0px 6px;
    padding: 36px 0px 0px; 
@@ -444,7 +480,7 @@ header button {
 .footer {
     margin-top: -5px;
     background: #d7e6f5;
-    padding: 18px 24px 0px;
+    padding: 21px 24px 24px;
 }
 .img-containeR img {
     margin-top: -33px;
@@ -460,16 +496,28 @@ header button {
     font-family: 'graphic-Medium';
     text-align: center;
 }
+/* march 13 */
+
 .mail {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   padding: 0px 0px 36px;
 }
+
 .mailBoth {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     border: 1px solid #fff;
     border-radius: 96px;
     box-shadow: 1px 2px 4px 0 rgb(34 34 34 / 10%) inset;
     background: #fff;
     padding: 0px;
+    max-width: 480px;
+    width: 100%;
 }
+/* march 13 */
 .mailBoth input {
     border: none;
     width: 150px;
@@ -486,6 +534,7 @@ header button {
     color: #222222;
     font-family: 'graphic-Medium';
 }
+/* march 13 */
 .footerSecond {
     margin-top: -19px;
 }
@@ -500,13 +549,157 @@ header button {
 
 }
 .global-text {
-    font-size: 16px;
+    font-size: 18px;
     background: #4d6bc6;
     text-align: center;
     color: #fff;
-    padding: 0px 12px;
-    border-bottom: 1px solid #fff;
+    padding: 5px 12px 15px 12px;
 }
+.global-text span {
+    border-bottom: 2px dashed;
+    line-height: 1.5;
+    font-size: 16px;
+    font-family: 'graphic-Regular';
+}
+.fa-show{
+    display: none;
+}
+.fa-show.active{
+    display: block;
+
+}
+.footerNav {
+    background: #2f466c;
+    padding: 12px 24px;
+    margin-top: -1px;
+}
+
+.nav-section h1{
+    font-size: 16px;
+    font-family: 'graphic-Regular';
+    color: #fff;
+
+}
+.fa-show li {
+    color: #fff;
+    font-family: 'Graphic-Regular';
+    list-style-type: none;
+    font-size: 14px;
+    padding: 10px 5px;
+}
+/* march 10 */
+.nav-section {
+    padding: 27px 0px;
+}
+.fa-btn {
+    display: flex;
+    justify-content: space-between;
+    color: #fff;
+}
+.fa-angle-down.active {
+    transform: rotate(180deg);
+}
+.etsyApp-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 15px;
+    margin-bottom: 10px;
+}
+.etsyApp-container a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    border: 2px solid #fff;
+    border-radius: 24px;
+    padding: 5px;
+    width: 210px;
+}
+.etsyApp-container a span {
+    color: #fff;
+    font-size: 13px;
+    font-family: 'graphic-Medium';
+    display: flex;
+}
+.social-media {
+    display: flex;
+    justify-content: center;
+    gap: 18px;
+    margin-top: 20px;
+    list-style-type: none;
+}
+.downApp {
+    display: flex;
+    justify-content: center;
+}
+.downApp a {
+    text-decoration: none;
+}
+.etsy-lang {
+    padding: 18px 24px;
+    background: #232347;
+}
+.language {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.language span {
+    font-family: 'graphic-Medium';
+    font-size: 13px;
+    color: #fff;
+}
+.copyrights {
+    display: flex;
+    flex-direction: column;
+    padding: 18px 24px; 
+}
+.copyrights span {
+    color: #fff;
+    font-size: 13px;
+    font-family: 'Graphic-light';
+    margin-bottom: 12px;
+    text-align: center;
+}
+/* match 13 */
+.lists {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    column-gap: 15px;
+    list-style-type: none;
+}
+.lists a {
+    color: #fff;
+    font-size: 12px;
+    font-family: 'Graphic-Regular';
+    list-style-type: none;
+    
+}
+.deals-text {
+    padding-bottom: 15px;
+}
+.footerNav-one {
+    display: none;
+}
+
+.img-ul li:hover {
+    border-bottom: 2px solid #222222;
+}
+.img-ul li img:hover {
+    width: 88px;
+
+}
+.dealsUl li:hover {
+    box-shadow: 0 4px 20px rgb(34 34 34 / 15%);
+}
+
+
+
+
+
 
 @media screen and (min-width: 480px) {
     .dealsUl {
@@ -514,9 +707,29 @@ header button {
     }
 }
 
+@media screen and (min-width: 505px) {
+    .copyrights {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: baseline;
+        column-gap: 7px;
+    }
+    .etsyLogo-img img {
+        width: 80px;
+    }
+} 
+
 @media screen and (min-width: 640px) {
+    .footerNav-one {
+        display: block;
+    }
     .img-container {
         margin-top: -88px;
+    }
+    .gift-heading h2 {
+        font-size: 28px;
+        padding: 33px 26px 5px 26px;
     }
     .img-ul {
         grid-template-columns: repeat(6, 1fr);
@@ -552,18 +765,77 @@ header button {
     .gifts-card ul {
         grid-template-columns: 1fr 1fr 1fr;
     }
-    .img-container1 video {
-        height: 140px;
-    }
     .gift-heading h2 {
         text-align: start;
     }
+    .globText {
+        display: flex;
+        justify-content: center;
+        background: #4d6bc6;
+        margin-top: -6px;
+        padding: 6px 0px;
+    }
+    /* 13 */
+    .fa-btn i {
+        display: none;
+    }
+    .footerNav {
+        display: flex;
+    }
+    .fa-show {
+        display: block;
+    }
+    .fa-show li {
+        font-size: 13px;
+        padding: 10px 0px;
+    }
+    .footerNav {
+        display: none;
+    }
+    .footerNav-one {
+        background: #2f466c;
+        padding: 12px 24px;
+        margin-top: -1px;
+        position: relative;
+    }
+    .navAndApp {
+        display: flex;
+        justify-content: space-between;
+        width: 86%;
+    }
+    .etsyApp-container {
+        position: absolute;
+        bottom: 38px;
+        right: 44px;
+        width: 24%;
+        align-items: center;
+    }
+    .downApp {
+        width: 92%;
+    }
+    .social-media {
+        display: flex;
+        justify-content: flex-start;
+        gap: 10px;
+        margin-top: 20px;
+        flex-wrap: wrap;
+    }
+
+
+ 
 
 }
 @media screen and (min-width: 654px) {
     .img-ul {
         margin-top: 0px;
     }
+}
+@media screen and (min-width: 768px) {
+    .searchBar input {
+        padding: 16px 8px 13px 7px;
+        width: 89%;
+    }
+  
 }
 
 @media screen and (min-width: 900px) {
@@ -604,8 +876,8 @@ header button {
 
     .list-items {
         display: flex;
-        align-items: center;
         flex-direction: row;
+        gap: 4px;
         font-size: 13px;
         padding: 0px 0px 13px;
         font-family: 'graphic-Regular';
@@ -642,17 +914,22 @@ header button {
         gap: 50px;
         text-align: left;
     }
-    .first-community {
-        width: 100%;
+    /* 13 */
+    .theEtsy {
+        display: flex;
+        gap: 68px;
     }
-    .whatIsEtsty {
-        width: 100%;
+    .first-community {
+        width: 83%;
     }
     .support {
         width: 92%;
     }
     .privacy {
         width: 91%;
+    }
+    .whatIsEtsty {
+        width: 100%;
     }
     .help-center{
         text-align: center;
@@ -663,9 +940,21 @@ header button {
     .aboutEtsy a{
         text-align: center;
     }
-    nav {
+    /* nav {
         background: #2f46cc;
         padding: 12px 24px;
+    } */
+    /* 13 */
+    .leveling {
+        display: flex;
+        justify-content: space-between;
+    }
+    .copyrights {
+        display: flex;
+        justify-content: space-between;
+    }
+    .etsyStory {
+        text-align: center;
     }
 
 }
@@ -704,6 +993,127 @@ header button {
     }
     .img-container1 video {
         height: 150px;
+    }
+/* 13 */
+}
+@media screen and (min-width: 1607px) {
+    .footerNav-one {
+        padding: 12px 95px;
+    }
+    .etsyApp-container {
+        bottom: 61px;
+        right: 217px;
+    }
+    .etsy-lang {
+        padding: 18px 91px;
+    }
+    .theEtsy {
+        gap: 0px;
+    }
+    .first-community {
+        width: 100%;
+    }
+    .first-community p {
+        width: 402px;
+    }
+    .support {
+        width: 93%;
+    }
+    .support h3 {
+        white-space: nowrap;
+        width: 300px;
+    }
+    .img-containeR img {
+        padding: 9px 0px;
+    }
+    .support p {
+        width: 421px;
+    }
+    .privacy p {
+        width: 406px;
+    }
+    .theEtsy h3 {
+        font-size:  28px;
+        width: 300px;
+    }
+    .aboutEtsy {
+        margin-inline: 140px;
+    }
+    .help-center {
+        margin-top: 41px;
+    }
+    .footer {
+        margin-top: -15px;
+        padding: 38px 24px 24px;
+    }
+    .globText {
+        margin-top: -6px;
+    }
+    .main-container {
+        margin-bottom: -11px;
+    }
+    .dealsOfTheDay {
+        margin-inline: 105px;
+    }
+    .gifts-section {
+        margin-inline: 105px;
+    }
+    .nav-search-bar {
+        margin-inline: auto;
+        width: 85%;
+    }
+    .searchBar-container-second-head {
+        width: 80.32%;
+    }
+    header {
+        gap: 21px;
+    }
+    .profile-items li {
+        white-space: nowrap;
+    }
+    .list-ul {
+        margin-top: 2px;
+    }
+}
+@media screen and (min-width: 1767px) {
+    .dealsOfTheDay {
+        margin-inline: 255px;
+    }
+    .gifts-section {
+        margin-inline: 255px;
+    }
+    .aboutEtsy {
+        margin-inline: 295px;
+    }
+    .theEtsy {
+        gap: 40px;
+    }
+    .theEtsy p {
+        width: 416px;
+    }
+    .nav-search-bar {
+        width: 73%;
+    }
+    .footerNav-one {
+       padding: 0px 250px;
+    }
+    .etsy-lang {
+        padding: 23px 235px;
+    }
+    .img-ul li img:hover {
+        width: 122px;
+        height: 120px;
+        box-shadow: 0 4px 20px rgb(34 34 34 / 15%);
+    }
+    .img-containerBox {
+        width: 118px;
+        height: 118px;
+        transition: 0.5s;
+        cursor: pointer;
+    }
+    .img-containerBox img {
+        width: 100%;
+        height: 100%;
     }
 
 }
