--- a/flipkart/style.css
+++ b/flipkart/style.css
@@ -14,15 +14,82 @@ body{
 }
 .navBar {
     background: #2874f0;
+    height: 56px;
 }
 .nav-section {
     display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 70%;
 }
 .navHeading {
     display: flex;
     flex-direction: column;
 }
+.navHeading a {
+    color: #fff;
+    font-size: 11px;
+    text-decoration: none;
+}
+.navHeading span {
+    color: #ffe500;
+}
 .navSearch-bar form {
     display: flex;
     align-items: center;
+    border: 1px solid #fff;
+    background-color: #fff;
+    padding: 4.5px 0px;
+    width: 590px;
 }
+.navInput input {
+    border: none;
+    padding-left: 13px;
+}
+.navSearch-bar button {
+    border: none;
+    background: #fff;
+}
+.navLogin a {
+    color: #2874f0;
+    background: #fff;
+    font-family: 'roboto-medium';
+    padding: 5px 40px;
+    text-decoration: none;
+}
+.navSeller span {
+    font-size: 16px;
+    color: #fff;
+    font-family: 'roboto-medium';
+}
+.navMore {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+.navMore i {
+    font-size: 10px;
+    color: #fff;
+}
+.moreOption {
+    font-size: 16px;
+    color: #fff;
+    font-family: 'roboto-medium';
+}
+.navCart a span{
+    color: #fff;
+    font-family: 'roboto-medium';
+    white-space: nowrap;
+    text-decoration: none;
+}
+.navCart a {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    text-decoration: none;
+}
+.navFlipkart {
+    margin-right: -20px;
+}
+
+
