--- a/flipkart/style.css
+++ b/flipkart/style.css
@@ -13,6 +13,8 @@ body{
     src: url(/Assets/font/roboto-regular-webfont.woff2);
 }
 .navBar {
+    display: flex;
+    justify-content: center;
     background: #2874f0;
     height: 56px;
 }
@@ -20,11 +22,13 @@ body{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    column-gap: 27px;
     width: 70%;
 }
 .navHeading {
     display: flex;
     flex-direction: column;
+    margin-right: -22px; 
 }
 .navHeading a {
     color: #fff;
@@ -45,6 +49,7 @@ body{
 .navInput input {
     border: none;
     padding-left: 13px;
+    padding-right: 362px;
 }
 .navSearch-bar button {
     border: none;
@@ -61,6 +66,7 @@ body{
     font-size: 16px;
     color: #fff;
     font-family: 'roboto-medium';
+    white-space: nowrap;
 }
 .navMore {
     display: flex;
@@ -88,8 +94,23 @@ body{
     gap: 5px;
     text-decoration: none;
 }
-.navFlipkart {
-    margin-right: -20px;
+
+/* 17 */
+.shopingList {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 35px;
+    border-bottom: 1px solid rgba(191, 186, 186, 0.867);
+    height: 40px;
 }
-
-
+.category {
+    display: flex;
+    font-size: 14px;
+    font-family: 'roboto-medium';
+}
+.downImg svg{
+    margin-left: -25px;
+    width: 8px;
+    opacity: 0.5;
+}
