--- a/flipkart/style.css
+++ b/flipkart/style.css
@@ -114,3 +114,21 @@ body{
     width: 8px;
     opacity: 0.5;
 }
+.filterHeading {
+    border-bottom: 1px solid rgb(192, 180, 180);
+    padding: 10px;
+}
+.filText {
+    font-size: 18px;
+    font-family: 'roboto-medium'
+}
+.blueText {
+    font-size: 12px;
+    font-family: 'roboto-medium';
+    color: #2874f0;
+}
+.filterCategories {
+    display: flex;
+    flex-direction: column;
+    border-bottom: 1px solid rgb(191, 190, 190);
+}
